--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@ a:hover {
 <p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom gledanja karte, kartiranja nekaj sto lokacij sredi ničesar in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes.<br>
 <br>
 
-<h3>Zakaj aplikacija in ne papirnata planinska karta?</h3>
-<p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav poti, možici ali celo grajene 2m široke mulatjere s predori obstajajo. Včasih gremo tudi kam drugam kot na vrh in karta pride zelo prav na izletu okrog Snežnika, po Krasu ali npr. po Juliani. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000 in ne 25.000 ali celo 50.000 kot na papirju. GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za točnost lokacije. Nesreča ne počiva in takrat je lepo biti založen z vsem. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon.</p>
+<h3>Prednosti uporabe digitalnih kart in aplikacij?</h3>
+<p>Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti planinske. Veliko vrhov nima markiranih planinskih poti, čeprav tja vodijo poti, ali celo grajene 2m široke mulatjere s predori. Včasih gremo tudi kam drugam kot na vrh in karta pride zelo prav na izletu okrog Snežnika, po Krasu ali npr. po Juliani. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000 in ne 25.000 ali celo 50.000 kot na papirju. GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za točnost lokacije. Nesreča ne počiva in takrat je lepo biti založen z vsem. Predvsem pa: karta je zgolj pripomoček, aplikacija še toliko bolj. Oči na pot, ne v zaslon.</p>
 
 <h3>PZS in ostali viri podatkov</h3>
 <p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikaciji Locus in Avenza.</p>
-<p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. OSM urejajo posamezniki. Več prostovoljcev > <b>boljši bodo podatki v vseh aplikacijah.</b> Prednost vektorskih zbirk pred klasični kartografskimi rastrskimi produkti (npr PZS karte) je posodabljanje. Stroški revizije zemljevida in ponovne izdelave so neprimerno večji in zato se nove verzije izdelajo na več let. V OSM so na voljo čez nekaj ur, a brez uredniške revizije.</p> 
+<p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi odprtosti brezplačno na voljo vsem. Pridobivanje podatkov je drago zato je OSM vir praktično vseh ponudnikov kart ter tudi plačljivih aplikacij. OSM urejajo posamezniki. Več prostovoljcev > <b>boljši bodo podatki v vseh aplikacijah.</b> Prednost vektorskih zbirk pred klasični rastrskimi produkti (npr PZS karte) je posodabljanje. Stroški revizije zemljevida in ponovne izdelave so neprimerno večji in zato se nove verzije izdelajo na več let. V OSM so na voljo čez nekaj ur, a brez uredniške revizije.</p> 
 
 <p>Velika večina aplikacij nudi enake reči in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo in vojsko razvijalcev.</p> 
 <img src="slike\outdoorkarta.jpg" height="600">
-<p>Primer obljube: Outdooractive oglašuje, da v PRO naročnini dobite tudi dostop do njihove Outdooractive karte. Vse lepo in prav ampak Slovenije ni v tej zbirki. Na območju naše države je prikazan brezplačen OpenStreetMap.</p>
+<p>Primer obljube: Outdooractive oglašuje, da v PRO naročnini dobite tudi dostop do njihove Outdooractive karte. Vse lepo in prav ampak ta zbirka pokriva Nemčijo, Avstrijo, Francijo in Italijo. Drugje je prikazan brezplačen OpenStreetMap.</p>
 
 
 <p>Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve ter potešijo radovednost koliko smo oddaljeni do naslednje točke. 
 <br>
-Še en nasvet - sam ne beležim prehojene poti/aktivnosti s telefonom. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je le rezerva. Alternativa je pametna ura.</p>
+Še en nasvet - sam načeloma ne beležim prehojene poti/aktivnosti s telefonom. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (poleg papirnate karte) je rezerva. Alternativa je pametna ura.</p>
 
 <h1 align="center">OruxMaps, Locus, Avenza in Cartograph 2 maps</h1>
 <h3>Orux</h3>
@@ -96,30 +96,30 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 <h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije in klikanja, zgolj s premikom karte izvemo razdaljo od stojišča pri Koči pri Krnskih jezerih do izbrane lokacije - 830m in smer 339 stopinj. Meni najljubša funkcija v zelo slabem vremenu, ponoči ali v 99% primerih zgolj preverjanje razdalje do naslednjega razpotja. Smer in razdalja kjerkoli.</h5>
 
 <img src="slike\navigacija.jpg" height="600">
-<p>Še en primer funkcionalnosti - izračun poti. Locus (levo) uporablja lastno bazo za navigacijo in izračun poti, Orux zunanje ponudnike (graphhoper). Razlika? Locus potrebuje prenos podatkov, znotraj Oruxa z enim klikom prenesemo celotno bazo Graphhoperja (vir OSM) za Slovenijo in mobilni podatki niso potrebni. Prazen prostor na dnu Locusa je prostor, ki ga zasedajo reklame.</p>
+<p>Še en primer funkcionalnosti - izračun poti. Oba uporabljata zunanje ponudnike navigacije ter nudita prenos baz za izračun brez povezave. Prazen prostor na dnu Locusa je prostor, ki ga v brezplačni verziji zasedajo reklame.</p>
 <br>
 
-<h3>Locus</h3>
-<p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. <b>Če šteje osebno mnenje - ni neke razlike z Oruxom oziroma je v nekaterih pogledih celo v prednosti. Go for it ampak kupite plačljivo verzijo, ker meni se je prvih nekaj mesecev do nakupa trgalo zaradi reklam :).</b> Za približno 20€ enkratnega nakupa ste opremljeni z aplikacijo in kar nekaj PZS kartami.</p><br>
+<h3>Locus PRO</h3>
+<p>Locus nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Uporabniški vmesnik je preprostejši. Primeren za uporabnika, ki želijo <b>tudi</b> uradne PZS zemljevide. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, tudi Outdoorsactive, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. <b>Če šteje osebno mnenje - ni neke razlike z Oruxom oziroma je v nekaterih pogledih celo v prednosti. Go for it ampak kupite PRO verzijo.</b> Za približno 20€ enkratnega nakupa ste opremljeni z aplikacijo in kar nekaj PZS ali ostalimi kartami. Locus nudi tudi mesečno naročnino - v zameno dobite načrtovalnik tur, sinhronizacijo, resnični offline paket, deljenje lokacije z izbranimi osebami (potrebuje prenos podatkov),...</p><br>
 <img src="slike\locus.jpg" height="600">
 <p>Trgovina Locus in PZS produkti.</p>
 <br>
 <h3><a href="https://www.avenzamaps.com/">Avenza</a></b></h3>
-<p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin. V njej je mogoče kupiti tako PZS kot karte Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a na žalost niso na razpolago v Locus trgovini. Slabost Avenze? Če v trgovini ni karte vašega območja ste brez karte.</p>
+<p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin. V njej je mogoče kupiti tako PZS kot karte Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a na žalost niso na razpolago v Locus trgovini. Slabost Avenze? Funkcionalnosti, nabor kart in to, da ne podpira vektorskih zemljevidov.</p>
 
 <h3>Apple IOS?</h3>
 <p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. Locus ni na voljo za IOS. </p>
 
 <h3>Outdooractive, Bergfex, Komoot,...</h3>
-<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Bergfex? Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. 
+<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Za Slovenijo imajo karte 1:25.000 in sloj planinskih poti. <br> Bergfex? Že ime "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu/outdooractive. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. 
 Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </p>
 
 <img src="slike\outdoor1.jpg" height="600">
 
-<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti in razne drobnarije. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. Ena izmed boljših funkcionalnosti je hitro kopiranje koordinat ali uvedba <a href="https://what3words.com/how-to">w3w sistema</a> hitrega sporočanja lokacije (rabi prenos podatkov).</p>
+<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti in razne drobnarije. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Danes se ne prodaja več aplikacij ampak storitve. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. Ena izmed boljših funkcionalnosti je hitro kopiranje koordinat ali uvedba <a href="https://what3words.com/how-to">w3w sistema</a> hitrega sporočanja lokacije (rabi prenos podatkov).</p>
 <img src="slike\bergfex.jpg" height="600">
 
-<p>"Težava" teh aplikacij je globalno ali regionalno tržišče - opisov v slovenščini je malo. Nizozemec, ki je prispeval svojo turo v aplikacijo je opis napisal v svojem jeziku, lokalne turistične organizacije praviloma pišejo v angleščini ali nemščini.</p>
+<p>"Težava" teh aplikacij je globalno ali regionalno tržišče - opisov v slovenščini je malo. Nizozemec, ki je prispeval svojo turo v Julijskih Alpah je opis napisal v svojem jeziku, lokalne turistične organizacije praviloma pišejo v angleščini ali nemščini.</p>
 <br>
 
 <br>
