--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 <p>Locus nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Uporabniški vmesnik je preprostejši. Primeren za uporabnika, ki želijo <b>tudi</b> uradne PZS zemljevide. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, tudi Outdoorsactive, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. <b>Če šteje osebno mnenje - ni neke razlike z Oruxom oziroma je v nekaterih pogledih celo v prednosti. Go for it ampak kupite PRO verzijo.</b> Za približno 20€ enkratnega nakupa ste opremljeni z aplikacijo in kar nekaj PZS ali ostalimi kartami. Locus nudi tudi mesečno naročnino - v zameno dobite načrtovalnik tur, sinhronizacijo, resnični offline paket, deljenje lokacije z izbranimi osebami (potrebuje prenos podatkov),...</p><br>
 <img src="slike\locus.jpg" height="600">
 <p>Trgovina Locus in PZS produkti.</p>
+<img src="slike\locusorux.jpg" height="600">
+<p>OpenAndroMaps karta v obeh aplikacijah.</p>
 <br>
 <h3><a href="https://www.avenzamaps.com/">Avenza</a></b></h3>
 <p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin. V njej je mogoče kupiti tako PZS kot karte Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a na žalost niso na razpolago v Locus trgovini. Slabost Avenze? Funkcionalnosti, nabor kart in to, da ne podpira vektorskih zemljevidov.</p>
@@ -120,7 +122,8 @@ Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </p>
 <img src="slike\bergfex.jpg" height="600">
 
 <p>"Težava" teh aplikacij je globalno ali regionalno tržišče - opisov v slovenščini je malo. Nizozemec, ki je prispeval svojo turo v Julijskih Alpah je opis napisal v svojem jeziku, lokalne turistične organizacije praviloma pišejo v angleščini ali nemščini.</p>
-<br>
+<img src="slike\oruxoutdoor.jpg" height="600">
+<p>Primerjava OSM karte v Outdooractive (levo) in Orux (desno).</p><br>
 
 <br>
 <h2>Še nekaj ostalih...</h2>
@@ -161,7 +164,7 @@ Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </p>
 <h3>Mesečna naročnina</h3>
 <p>Outdooractive. Zakaj ne Bergfex? Ker je vsebinsko (kartografsko) narejen za Avstrijo. Outdooractive dobite za 30€ letno in imate čudovit načrtovalnik poti. Nimate pa svobode dodajanja lastnih kart ampak roko na srce - za naročnino se pričakuje tudi "out-of-the-box" rešitev.</p>
 
-<p>Sam imam v lasti vse tri, saj so mi vse tri aplikacije uporabne in rad brskam po njih. No, obstajajo tudi tiskani vodniki, ki so še vedno čudovito darilo. P.S. na terenu je 99,9% časa v uporabi Orux.</p>
+<p>Sam imam v lasti vse tri. No, obstajajo tudi tiskani vodniki, ki so še vedno čudovito darilo. P.S. na terenu je 99,9% časa v uporabi Orux, kjer uporabljam praviloma le prikaz lokacije in zemljevida.</p>
 <br>
 <br>
 <h1>Namestitev OruxMaps/Locus</h1>
