--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ img
             <div class="col-12">
               <h3 align="center">Outdooractive, Bergfex, Komoot,...</h3>
               <p>Kaj pa Outdooractive in ostali načrtovalniki? Velika prednost naštetih je dostopnost tako za Android kot IOS naprave. Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Za Slovenijo imajo karte 1:25.000 in sloj planinskih poti. <br> Bergfex? Že ime "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu/outdooractive. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. 
-              Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </p>
+              <b>Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </b></p>
               <img class="img-fluid" src="slike\outdoor1.jpg" height="600">
               <p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti in razne drobnarije. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Danes se ne prodaja več aplikacij ampak storitve. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. Ena izmed boljših funkcionalnosti je hitro kopiranje koordinat ali uvedba <a href="https://what3words.com/how-to">w3w sistema</a> hitrega sporočanja lokacije (rabi prenos podatkov).</p>
               <img class="img-fluid" src="slike\bergfex.jpg" height="600">
@@ -225,11 +225,13 @@ img
           <!-- načrtovanje -->
           <div class="row">
             <h3 align="center">Načrtovanje doma</h3>
-            <p>Načrtovanje ture praviloma naredimo doma - brez težav lahko uporabimo spletni portal <a href="https://www.outdooractive.com/en/routeplanner/">Outdooractive</a>, analiziramo in načrtujemo pot, vidimo višinski profil poti, ... prav tako lahko brezplačno pregledujemo ture v zgoraj omenjenih aplikacijah. Npr. <a href="https://www.bergfex.com/sommer/goriska-region/">Bergfex</a> </p>
+            <p>Načrtovanje ture praviloma naredimo doma - brez težav lahko uporabimo spletni portal <a href="https://www.outdooractive.com/en/routeplanner/">Outdooractive</a>, analiziramo in načrtujemo pot, vidimo višinski profil poti, ... </p>
             <img class="img-fluid" src="slike\outdoor.jpg" height="600">
             <p>Višinski profil poti prikazuje tudi podatek o podlagi - ali je steza, pot, tlakovana, itd...vir vseh teh atributov je vestno delo tisočih prostovoljev, ki urejajo OSM.</p>
             <br>
-
+            <img class="img-fluid" src="slike\bergfexonl.jpg">
+            <p>Prav tako lahko brezplačno pregledujemo ture v zgoraj omenjenih aplikacijah. Npr. <a href="https://www.bergfex.com/sommer/goriska-region/">Bergfex</a> </p>
+            <img class="img-fluid" src="slike\hribi.jpg">
             <p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b></p>
           </div>  
           <!-- Končna odločitev -->
