--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ img
           <br>
           <br>
           <p>.................................</p>
-          <p>@Grega Žorž (gregazorz@gmail.com)</p>
+          <p>@Grega Žorž (gregazorz@gmail.com); avgust 2021</p>
         </div>
       </div>
 
