--- a/index.html
+++ b/index.html
@@ -238,8 +238,13 @@ img
             <br>
             <img class="img-fluid" src="slike\bergfexonl.jpg">
             <p>Prav tako lahko brezplačno pregledujemo ture v zgoraj omenjenih aplikacijah. Npr. <a href="https://www.bergfex.com/sommer/goriska-region/">Bergfex</a> </p>
+            <br>
             <img class="img-fluid" src="slike\hribi.jpg">
             <p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili <b>zavezati določeni aplikaciji.</b></p>
+            <br>
+            <img class="img-fluid" src="slike\pzs.jpg">
+            <p>Ena izmed možnosti načrtovanja na računalniku je tudi pregledovalnik <a href="https://poti.pzs.si/">poti PZS</a>. Prednost pregledovalnika je prikaz planinskih poti po odsekih s časovnico. </p>
+            
           </div>
         </div>  
         <!-- Končna odločitev -->
