--- a/index.html
+++ b/index.html
@@ -178,8 +178,13 @@ img
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
             </div>
             <div class="carousel-inner">
+              <!-- naslednja -->
               <div class="carousel-item active" >
                 <img src="slike\mapzs.jpg" class="d-block w-548" alt="..." height="600" align="center">
                 <div class="carousel-caption d-none d-md-block">
@@ -189,6 +194,7 @@ img
                   </div>
                 </div>
               </div>
+              <!-- naslednja -->
               <div class="carousel-item">
                 <img src="slike\mapsme.jpg" class="d-block w-285" alt="..." height="600">
                 <div class="carousel-caption d-none d-md-block">
@@ -198,6 +204,7 @@ img
                   </div>
                 </div>
               </div>
+              <!-- naslednja -->
               <div class="carousel-item">
                 <img src="slike\mapy.jpg" class="d-block w-285" alt="..." height="600">
                 <div class="carousel-caption d-none d-md-block">
@@ -207,12 +214,43 @@ img
                   </div>
                 </div>
               </div>
+              <!-- naslednja -->
               <div class="carousel-item">
                 <img src="slike\tabacco.jpg" class="d-block w-285" alt="..." width="285" height="600">
                 <div class="carousel-caption d-none d-md-block">
                   <div class="btn btn-info" role="alert">
                     <h5 style="color:black;">Tabacco</h5>
                     <p style="color:black;">Ena izmed redkih kartografskih hiš z lastno aplikacijo za nakup in uporabo zgolj njihovih digitalnih kart. Za razliko od PZS prodajajo kvadrante.</p>
+                  </div>
+                </div>
+              </div>
+              <!-- naslednja -->
+              <div class="carousel-item" >
+                <img src="slike\fatmap.jpg" class="d-block w-548" alt="..." height="600" align="center">
+                <div class="carousel-caption d-none d-md-block">
+                  <div class="btn btn-info" role="alert">
+                    <h5 style="color:black;">FatMap</h5>
+                    <p style="color:black;">Aplikacija proizvajalca FatMap - za tujino lep nabor topo kart. Slovenija - derivat OSM. Plačljiva.</p>
+                  </div>
+                </div>
+              </div>
+              <!-- naslednja -->
+              <div class="carousel-item" >
+                <img src="slike\gaia.jpg" class="d-block w-548" alt="..." height="600" align="center">
+                <div class="carousel-caption d-none d-md-block">
+                  <div class="btn btn-info" role="alert">
+                    <h5 style="color:black;">Gaia GPS</h5>
+                    <p style="color:black;">Aplikacija Gaia. Približek OruxMaps. Vsebuje trgovino rastrskih in vektorskih kart. Brezplačno le derivat OSM. </p>
+                  </div>
+                </div>
+              </div>
+              <!-- naslednja -->
+              <div class="carousel-item" >
+                <img src="slike\monolit.jpg" class="d-block w-548" alt="..." height="600" align="center">
+                <div class="carousel-caption d-none d-md-block">
+                  <div class="btn btn-info" role="alert">
+                    <h5 style="color:black;">Slovenia trails</h5>
+                    <p style="color:black;">Primarno galerija izletov in destinacij. Nastala v sodelovanju Monolit in STO.</p>
                   </div>
                 </div>
               </div>
