--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ img
           <div class="col-6">
             <h3>PZS in ostali viri podatkov</h3>
             <p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikaciji Locus in Avenza.</p>
+            <h5><b>OpenStreetMap</b></h5>
             <p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi odprtosti brezplačno na voljo vsem. Pridobivanje podatkov je drago zato je OSM vir praktično vseh ponudnikov kart ter tudi plačljivih aplikacij. OSM urejajo posamezniki. Več prostovoljcev > <b>boljši bodo podatki v vseh aplikacijah.</b> Prednost vektorskih zbirk pred klasični rastrskimi produkti (npr PZS karte) je posodabljanje. Stroški revizije zemljevida in ponovne izdelave so neprimerno večji in zato se nove verzije izdelajo na več let. V OSM so na voljo čez nekaj ur, a brez uredniške revizije.</p> 
           </div>
         </div>
