--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ img
             <img class="img-fluid" src="slike\bergfex.jpg" height="600">
             <p>"Težava" teh aplikacij je globalno ali regionalno tržišče - opisov v slovenščini je malo. Nizozemec, ki je prispeval svojo turo v Julijskih Alpah je opis napisal v svojem jeziku, lokalne turistične organizacije praviloma pišejo v angleščini ali nemščini.</p>
             <img class="img-fluid" src="slike\oruxoutdoor.jpg" height="600">
-            <p>Primerjava OSM karte v različni vizualizaciji v Outdooractive (levo) in Orux/Locus (desno).</p><br>
+            <p>Primerjava OSM karte v različni vizualizaciji v Outdooractive (levo) in Orux/Locus (desno). Največja razlika? Outdooractive ne prikazuje težavnosti poti, čeprav gre za isti vir podatkov.</p><br>
           </div>
         </div>
         <!-- ostali -->
@@ -366,7 +366,17 @@ img
             <p>Ko je namestitev teme dokončana, v aplikaciji kliknite ikono za več možnosti (zgoraj levo tri črte) ter kliknite na "Mapsforge oblika karte". Prikažejo se tri teme - privzeta, elements in elevate. Izberite slednjo. V primeru, da teme niso vidne zaprite aplikacijo in jo zopet zaženite.
             </p>
             <img class="img-fluid" src="slike\krn.jpg" height="600">
-            <p>Rezultat: območje Krna. Poti so prikazane glede na kategorijo težavnosti in ohranjenosti. OSM projekt uporablja švicarske <a href="https://www.bergfreunde.eu/alpine-grades-calculator/">SAC težavnostne kategorije</a>. </p>
+            <p>Rezultat: območje Krna. Poti so z barvami prikazane glede na kategorijo težavnosti in ohranjenosti. OSM projekt uporablja švicarske <a href="https://www.bergfreunde.eu/alpine-grades-calculator/">SAC težavnostne kategorije</a>. </p>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <h3 align="center">SAC kategorije</h3>
+            </div>
+            <!-- SAC SCALE -->
+            <img class="img-fluid" src="slike\sac.jpg">
+            <p>Šest kategorij (T1 - T6) ter pogoji poti, terena in opremljenosti. Mulatjera na Krn večinoma sodi v kategorijo T1.</p>
+            <img class="img-fluid" src="slike\sac_barve.jpg">
+            <p>Primerjava nemške in švicarske simbologije. </p>
           </div>
         </div>
         <!-- druge karte in viri -->
