--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ img
             <img class="img-fluid" src="slike\bergfex.jpg" height="600">
             <p>"Težava" teh aplikacij je globalno ali regionalno tržišče - opisov v slovenščini je malo. Nizozemec, ki je prispeval svojo turo v Julijskih Alpah je opis napisal v svojem jeziku, lokalne turistične organizacije praviloma pišejo v angleščini ali nemščini.</p>
             <img class="img-fluid" src="slike\oruxoutdoor.jpg" height="600">
-            <p>Primerjava OSM karte v različni vizualizaciji v Outdooractive (levo) in Orux/Locus (desno). Največja razlika? Outdooractive ne prikazuje težavnosti poti, čeprav gre za isti vir podatkov.</p><br>
+            <p>Primerjava OSM karte v različni vizualizaciji v Outdooractive (levo) in Orux/Locus (desno). Največja razlika? Outdooractive ne prikazuje z barvami težavnosti poti, čeprav gre za isti vir podatkov. </p><br>
           </div>
         </div>
         <!-- ostali -->
