--- a/index.html
+++ b/index.html
@@ -105,27 +105,37 @@ img
 
         <!-- Naslov aplikacije -->
         <div class="row">
-          <div class="col-12"><h1 align="center">OruxMaps, Locus, Avenza in Cartograph 2 maps</h1>
+          <div class="col-12"><h1 align="center">OruxMaps, Locus, Avenza, Komoot in Cartograph 2 maps</h1>
           </div>
           <!-- Orux -->
-          <div class="col-4">
-            <h3><a href="https://www.oruxmaps.com/cs/en/">Orux</a></h3>
+          <div class="col-6">
+            <h3><a href="https://www.oruxmaps.com/cs/en/">Orux</a> in <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961">Cartograph 2 maps</a></h3>
+            <img src="slike\android.png" height="30">
+            <img src="slike\ios.png" height="30">
             <p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo tudi "veliki" ponudniki (v času, ko sploh še niso obstajali). Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter tudi za delovne naloge. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, iščemo po vsebini zemljevida, uvažamo točke, ustvarjamo virtualne prostorske ograje, menjamo simbologijo iz pohodništva v kolesarjenje, itd. Nudi tudi odčitavanje koordinat v različnih zapisih za vse, ki imamo raje metrični sistem namesto stopinj. <br>
-              Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, celo lastnih kart, itd. Je zgolj in le kartografska aplikacija.
+            Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, celo lastnih kart, itd. Je zgolj in le kartografska aplikacija.
+            Najboljši približek Oruxa za IOS naprave je Cartograph 2 maps. Funkcionalnosti in način uvoza kart so enake.  
             </p>
           </div>
           <!-- Locus -->
-          <div class="col-4">
+          <div class="col-6">
             <h3><a href="https://www.locusmap.app/">Locus (PRO)</a></h3>
+            <img src="slike\android.png" height="30">
             <p>Locus nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Uporabniški vmesnik je preprostejši. Primeren za uporabnika, ki želijo <b>tudi</b> uradne PZS zemljevide. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, tudi Outdoorsactive, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. <b>Če šteje osebno mnenje - ni neke razlike z Oruxom oziroma je v nekaterih pogledih celo v prednosti. Go for it ampak kupite PRO verzijo.</b> Za približno 20€ enkratnega nakupa ste opremljeni z aplikacijo in kar nekaj PZS ali ostalimi kartami. Locus nudi tudi mesečno naročnino - v zameno dobite načrtovalnik tur, sinhronizacijo, resnični offline paket, deljenje lokacije z izbranimi osebami (potrebuje prenos podatkov),...Obstaja tudi aplikacija Locus GIS, ki je namenjena naprednemu urejanju prostorskih podatkov.</p>
           </div>
           <!-- Avenza -->
-          <div class="col-4">
+          <div class="col-6">
             <h3><a href="https://www.avenzamaps.com/">Avenza</a></b></h3>
-            <p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin. V njej je mogoče kupiti tako PZS kot karte Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a na žalost niso na razpolago v Locus trgovini. Slabost Avenze? Funkcionalnosti, nabor kart in to, da ne podpira vektorskih zemljevidov.</p>
-            <!-- IOS -->
-            <h3>Apple IOS?</h3>
-            <p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. Locus ni na voljo za IOS. </p>
+            <img src="slike\android.png" height="30">
+            <img src="slike\ios.png" height="30">
+            <p>Je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin. V njej je mogoče kupiti tako PZS kot karte Kartografije in Geodetskega inštituta Slovenije. Ker niso vse poti planinske, so zemljevidi teh dveh proizvajalcev zelo priročni - a na žalost niso na razpolago v Locus trgovini. Slabost Avenze? Funkcionalnosti, nabor kart in to, da ne podpira vektorskih zemljevidov.</p>
+          </div>
+          <!-- Komoot -->
+          <div class="col-6">
+            <h3><a href="https://www.komoot.com/">Komoot</a></b></h3>
+            <img src="slike\android.png" height="30">
+            <img src="slike\ios.png" height="30">
+            <p>Komoot je en izmed boljših načrtovalnikov poti, saj pri načrtovanju nudi tudi možnost spreminjanja telesne pripravljenosti. Na podlagi tega vam ne bo le izračunal daljšega časa ampak bo mogoče predlagal tudi drugo pot. Plačilna politika je pri njih malce drugačna - aplikacija je zastonj, kupiti je potrebno regije ali pavšalno ves svet. Komoot poleg aplikacije nudi še aplikacijo za pametno uro in je nasploh med boljšimi. Kaj pa slabosti? Da, kar velike. Na voljo so zgolj njihovi derivati OSM brez možnosti dodajanja drugih kart.</p>
           </div>
         </div>
         <!-- Slike primeri -->
@@ -154,10 +164,10 @@ img
       <!-- Outdooractive -->
       <div class="row">
         <div class="col-12">
-          <h3 align="center">Outdooractive, Bergfex, Komoot,...</h3>
+          <h3 align="center"><a href="https://www.outdooractive.com/en/">Outdooractive</a> in <a href="https://www.bergfex.com/apps/">Bergfex</a></h3>
         </div>
         <div class="col-12">
-          <p>Kaj pa Outdooractive in ostali načrtovalniki? Velika prednost naštetih je dostopnost tako za Android kot IOS naprave. Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Za Slovenijo imajo karte 1:25.000 in sloj planinskih poti. <br> Bergfex? Že ime "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu/outdooractive. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. 
+          <p>Kaj pa Outdooractive (bivši ViewRanger) in ostali načrtovalniki? Velika prednost naštetih je dostopnost tako za Android kot IOS naprave. Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto je nuja za offline zemljevide). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Za Slovenijo imajo karte 1:25.000 in sloj planinskih poti. <br> Bergfex? Že ime "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu/outdooractive. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. <br> Ortovox? Po novem del Outdooractive imperija. 
             <b>Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur. </b></p>
             <img class="img-fluid" src="slike\outdoor1.jpg" height="600">
             <p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti in razne drobnarije. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Danes se ne prodaja več aplikacij ampak storitve. Vsi uporabljajo isti vir ter izkušnjo gradijo na drugih funkcionalnostih. Ena izmed boljših funkcionalnosti je hitro kopiranje koordinat ali uvedba <a href="https://what3words.com/how-to">w3w sistema</a> hitrega sporočanja lokacije (rabi prenos podatkov).</p>
