--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@ img
           <div class="col-12">
             <p>Velika večina aplikacij nudi enake reči in so razlike predvsem v uporabniški izkušnji ter državi, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo, saj vse te funkcionalnosti zahtevajo strežniško infrastrukturo in vojsko razvijalcev.</p>
             <p>Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve ter potešijo radovednost koliko smo oddaljeni do naslednje točke. </p>
+
+          <h3>Dvojezičnost?</h3>
+          <p>Vektorske zbirke zemljevidov (Mapsforge) vsebujejo bazo podatkov (db) in zapis prikaza. Ker OSM podpira večjezične zapise pomeni, da lahko izberemo poljuben jezik prikaza podatkov. Napisi na karti bodo tako primarno prikazana v slovenščini (če slovensko ime obstaja).</p>
+          <img class="img-fluid" src="slike\jezik.jpg">
+          <p>Privzeta nastavitev karte levo in nastavitev slovenščine desno.</p>
+          <br>
             <img class="img-fluid" src="slike\outdoorkarta.jpg" height="600">
             <p>Primer obljube: Outdooractive oglašuje, da v PRO naročnini dobite tudi dostop do njihove Outdooractive karte. Vse lepo in prav ampak ta zbirka pokriva Nemčijo, Avstrijo, Francijo in Italijo. Drugje je prikazan brezplačen OpenStreetMap.</p>
           </div>
