--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ img
             <p>Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve ter potešijo radovednost koliko smo oddaljeni do naslednje točke. </p>
 
           <h3>Dvojezičnost?</h3>
-          <p>Vektorske zbirke zemljevidov (Mapsforge) vsebujejo bazo podatkov (db) in zapis prikaza. Ker OSM podpira večjezične zapise pomeni, da lahko izberemo poljuben jezik prikaza podatkov. Napisi na karti bodo tako primarno prikazani v slovenščini (če slovensko ime obstaja).</p>
+          <p>Vektorske zbirke zemljevidov (Mapsforge) vsebujejo bazo podatkov (db) in zapis prikaza. Ker OSM podpira večjezične zapise pomeni, da lahko izberemo poljuben jezik prikaza podatkov. Napisi na karti bodo tako primarno prikazani v slovenščini (če slovensko ime obstaja). Te funkcionalnosti številne aplikacije nimajo.</p>
           <img class="img-fluid" src="slike\jezik.jpg">
           <p>Privzeta nastavitev karte levo in nastavitev slovenščine desno. Kraj Kokova nima vpisanega slovenskega imena zato ga vedno prikazuje kot Coccau.</p>
           <br>
